--- a/example.conf
+++ b/example.conf
@@ -1,16 +1,17 @@
 [general]
-site_name=Sorta Software
 host_address=0.0.0.0
-host_port=80
+host_port=1337
 autoreload=true
-debug=false
+debug=true
+server=cherrypy
+deployment=fluttershop
 
 [db]
-mongo_address=127.0.0.1
+mongo_address=192.168.0.199
 mongo_port=27017
-redis_address=127.0.0.1
+redis_address=192.168.0.199
 redis_port=6379
-route_db=sdb
+route_db=mongo
 content_db=mongo
 rank_db=mongo
 user_db=mongo
